实现表情消息的显示

--- a/res/layout/layout_row_sent_message.xml
+++ b/res/layout/layout_row_sent_message.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bqmm="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingTop="13dp" >
+    android:paddingTop="13dp">
 
     <TextView
         android:id="@+id/timestamp"
@@ -27,10 +28,10 @@
             android:background="@drawable/mini_avatar_shadow"
               />
 
-        <TextView
+        <com.melink.bqmmsdk.widget.BQMMMessageView
+            bqmm:isleftview="false"
              android:maxWidth="225.0dip"
             android:id="@+id/tv_chatcontent"
-            style="@style/chat_content_date_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="8dip"
@@ -38,8 +39,7 @@
              android:lineSpacingExtra="2dp"
              android:autoLink="web"
             android:layout_marginRight="@dimen/margin_chat_activity"
-            android:layout_toLeftOf="@id/iv_userhead"
-            android:background="@drawable/chatto_bg" />
+            android:layout_toLeftOf="@id/iv_userhead" />
         
      <!--    <TextView
             android:id="@+id/tv_userid"
