--- a/res/layout/layout_row_received_message.xml
+++ b/res/layout/layout_row_received_message.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bqmm="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -27,14 +28,14 @@
             android:background="@drawable/mini_avatar_shadow"
              />
 
-        <TextView
+        <com.melink.bqmmsdk.widget.BQMMMessageView
+            bqmm:isleftview="true"
              android:maxWidth="225.0dip"
             android:id="@+id/tv_chatcontent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_chat_activity"
             android:layout_toRightOf="@id/iv_userhead"
-            android:background="@drawable/chatfrom_bg"
             android:autoLink="web"
             android:clickable="true"
             android:focusable="true"
