--- a/res/layout/gotye_activity_chat.xml
+++ b/res/layout/gotye_activity_chat.xml
@@ -118,6 +118,7 @@
                 android:layout_centerVertical="true"
                 android:src="@drawable/voice_btn_selector" />
 
+            <!--BQMM集成-->
             <!--增加一个打开表情键盘按钮-->
             <ImageView
                 android:id="@+id/send_emoji"
@@ -127,7 +128,8 @@
                 android:layout_toRightOf="@id/send_voice"
                 android:src="@drawable/send_emoji" />
 
-            <!--将文字编辑框换成表情MM提供的BQMMEditView-->
+            <!--BQMM集成-->
+            <!--将文字编辑框换成BQMM提供的BQMMEditView，并改变toRightOf属性-->
             <com.melink.bqmmsdk.widget.BQMMEditView
                 android:id="@+id/text_msg_input"
                 android:layout_width="match_parent"
@@ -144,6 +146,8 @@
                 android:paddingRight="5dp"
                 android:paddingTop="0dp" />
 
+            <!--BQMM集成-->
+            <!--改变它的toRightOf属性-->
             <Button
                 android:id="@+id/press_to_voice_chat"
                 android:layout_width="match_parent"
@@ -160,6 +164,7 @@
                 android:textSize="20sp"
                 android:visibility="gone" />
 
+            <!--BQMM集成-->
             <!--亲加Demo的发送按钮和“更多”功能按钮是共用的，这里我们增加一个发送按钮-->
             <com.melink.bqmmsdk.widget.BQMMSendButton
                 android:id="@+id/send_message"
@@ -169,6 +174,8 @@
                 android:layout_centerVertical="true"
                 android:background="@drawable/send_selector" />
 
+            <!--BQMM集成-->
+            <!--将这个visibility设为gone-->
             <ImageView
                 android:id="@+id/more_type"
                 android:layout_width="wrap_content"
@@ -220,6 +227,7 @@
                 android:src="@drawable/realtime_voice_selector"
                 android:visibility="gone" />
         </LinearLayout>
+        <!--BQMM集成-->
         <!--增加表情键盘-->
         <com.melink.bqmmsdk.ui.keyboard.BQMMKeyboard
             android:id="@+id/emoji_keyboard"
