--- a/res/layout/gotye_activity_chat.xml
+++ b/res/layout/gotye_activity_chat.xml
@@ -129,7 +129,7 @@
                 android:src="@drawable/send_emoji" />
 
             <!--BQMM集成-->
-            <!--将文字编辑框换成BQMM提供的BQMMEditView，并改变toRightOf属性-->
+            <!--将文字编辑框换成BQMM提供的BQMMEditView，并改变toLeftOf和toRightOf属性-->
             <com.melink.bqmmsdk.widget.BQMMEditView
                 android:id="@+id/text_msg_input"
                 android:layout_width="match_parent"
@@ -137,7 +137,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp"
-                android:layout_toLeftOf="@+id/more_type"
+                android:layout_toLeftOf="@+id/send_message"
                 android:layout_toRightOf="@+id/send_emoji"
                 android:background="@drawable/chat_input_bg"
                 android:imeOptions="actionSend"
