--- a/BQMM_Lib/res/values/color.xml
+++ b/BQMM_Lib/res/values/color.xml
@@ -60,7 +60,7 @@
 	<!-- 底部tab栏背景颜色 -->
 	<color name="bqmm_tab_background_color">#ffffffff</color>
 	<!-- 表情键盘背景颜色 -->
-	<color name="bqmm_keyboard_background_color">#22bcbcbc</color>
+	<color name="bqmm_keyboard_background_color">#fff6f6f6</color>
 	
 	<!-- 表情键盘商店按钮图案颜色 -->
 	<color name="bqmm_keyboard_shop_button_color">#ffffffff</color>
@@ -80,7 +80,9 @@
 	<color name="bqmm_preload_button_border_color">#ffffffff</color>
 	<!-- 默认大表情下载进度条颜色 -->
 	<color name="bqmm_preload_button_progress_color">#ff36cab6</color>
+	<!-- 默认大表情下载进度条背景颜色 -->
+	<color name="bqmm_preload_button_progress_background_color">#00000000</color>
 	<!-- 默认大表情下载按钮背景颜色 -->
-	<color name="bqmm_preload_button_background_color">#00000000</color>
+	<color name="bqmm_preload_button_background_color">#ff36cab6</color>
 	
 </resources>
